--- a/rapport/CompteRendu.tex
+++ b/rapport/CompteRendu.tex
@@ -598,7 +598,16 @@ contenu:
 
 
 
-
+%tableau
+\begin{center}
+\begin{tabular}{|M{4cm}|M{5cm}|M{6cm}|}
+   \hline
+    \, &Nombre de caract\`{e}r supprim\'{e}s / nombre de phrases trait\'{e}es & Pourcentage de caract\`{e}res supprim\'{e}s par phrase\tabularnewline
+   \hline
+    Filtre SpecialCaracterPurifier & 191 163 / 817 632 & 23,3\% \tabularnewline
+   \hline
+\end{tabular}
+\end{center}
 
 
 
